Dashboard spacing fixes

--- a/pgml-dashboard/app/static/css/base.css
+++ b/pgml-dashboard/app/static/css/base.css
@@ -123,7 +123,7 @@ section {
     box-shadow: 0 1px 2px var(--shadow-2);
     overflow: auto;
     min-width: 70vw;
-    max-width: 1200px;
+    max-width: 90vw;
 }
 
 /* Tables, sticky headers, overflow scroll, rounded corners, stripes and highlights */
@@ -512,6 +512,7 @@ nav ol, nav ul {
 
 .notebook-cell-edit {
   border: 1px solid var(--gray-8);
+  margin-bottom: 1rem;
 }
 
 .hidden {
@@ -573,10 +574,12 @@ nav ol, nav ul {
   height: fit-content;
   width: fit-content;
   padding: 2px 5px;
+  margin-bottom: 0.12rem;
+  margin-left: 0.2rem;
 }
 
 .notebook-delete-undo p {
-  margin: 0;
+  margin: 0 !important;
 }
 
 .notebook-cell .notebook-button button, .markdown-body button {
@@ -591,7 +594,7 @@ nav ol, nav ul {
   font-weight: bold;
   background: rgb(240, 240, 240);
   border: 1px solid var(--gray-7);
-  padding: 7px 6px;
+  padding: 0.5rem 6px;
   border-radius: 2px;
   margin-bottom: 2px;
 }
